--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div id="container">
+        <div id="world"></div>
+        <div id="player1"></div>
+        <div id="enemy"></div>
+        <div id="score">0</div>
+    </div>
 </body>
 </html>
