--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div id="container">
         <div id="world"></div>
         <div id="player1"></div>
-        <div id="enemy"></div>
+        <!-- <div id="enemy"></div> -->
+        <div id="enemy1"></div>
+        <div id="enemy2"></div>
         <div id="score">0</div>
         <div id="game_over"></div>
     </div>
