--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="player1"></div>
         <div id="enemy1"></div>
         <div id="enemy2"></div>
+        <div id="enemy3"></div>
         <div id="score">0</div>
         <div id="game_over"></div>
     </div>
